# cpp_cmake_project_templates

./: .gitignore  README.md
c_console_app_cmake_template/: CMakeLists.txt
c_console_app_cmake_template/src/: main.c
console_app_cmake_template/: CMakeLists.txt
console_app_cmake_template/src/: main.cpp
console_app_with_import_std_cmake_template/: CMakeLists.txt
console_app_with_import_std_cmake_template/src/: main.cpp
gtkmm4_cmake_template/: .gitignore  CMakeLists.txt
gtkmm4_cmake_template/src/: main.cpp  mainwindow.cpp  mainwindow.h
qt6-qtquick_cmake_project_template/: CMakeLists.txt
qt6-qtquick_cmake_project_template/src/: resources.qrc
qt6-qtquick_cmake_template/: CMakeLists.txt
sfml2_cmake_template/: CMakeLists.txt
sfml3_cmake_template/: CMakeLists.txt
sfml3_cmake_template/src/: main.cpp
sfml_cmake_template/: CMakeLists.txt
sfml_cmake_template/src/: main.cpp
